--- a/template.html
+++ b/template.html
@@ -4,9 +4,12 @@
       Fields
     <header>
     <article class="shadow-md	bg-zinc-100 rounded-md p-4 my-2">
-      <div class="grid grid-cols-[25%_75%] gap-1">
+      <header class="flex flex-row gap-2">
         <img src="https://placehold.co/40">
-        <h2 class="uppercase font-bold text-lg">sequence</h2>
+        <h2 class="capitalize font-bold text-lg grow">sequence field</h2>
+        <img src="https://placehold.co/20" alt="remove">
+      </header>
+      <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="name" class="font-medium">Name</label>
         <input id="name" type="text" placeholder="jsonpath" value="id">
         <label for="start" class="font-medium">Start</label>
@@ -45,9 +48,12 @@
       </details>
     </article>
     <article class="shadow-md	bg-zinc-100 rounded-md p-4 my-2">
-      <div class="grid grid-cols-[25%_75%] gap-1">
+      <header class="flex flex-row gap-2">
         <img src="https://placehold.co/40">
-        <h2 class="uppercase font-bold text-lg">choice_ref</h2>
+        <h2 class="capitalize font-bold text-lg grow">choice_ref field</h2>
+        <img src="https://placehold.co/20" alt="remove">
+      </header>
+      <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="name" class="font-medium">Name</label>
         <input id="name" type="text" placeholder="jsonpath" value="prenom">
         <label for="uri" class="font-medium">URI</label>
