--- a/template.html
+++ b/template.html
@@ -1,4 +1,4 @@
-<main class="flex flex-row px-5 font-sans leading-8 text-sky-900">
+<main class="flex flex-row px-5 font-sans leading-8 text-slate-700">
   <section class="basis-1/2">
     <header>
       Fields
@@ -6,7 +6,7 @@
     <article class="shadow-md	bg-zinc-100 rounded-md p-4 my-2">
       <header class="flex flex-row gap-2">
         <img src="https://placehold.co/40">
-        <h2 class="capitalize font-bold text-lg grow">sequence field</h2>
+        <h2 class="capitalize font-bold text-lg grow leading-10">sequence</h2>
         <img src="https://placehold.co/20" alt="remove">
       </header>
       <div class="grid grid-cols-[25%_75%] gap-1">
@@ -50,7 +50,7 @@
     <article class="shadow-md	bg-zinc-100 rounded-md p-4 my-2">
       <header class="flex flex-row gap-2">
         <img src="https://placehold.co/40">
-        <h2 class="capitalize font-bold text-lg grow">choice_ref field</h2>
+        <h2 class="capitalize font-bold text-lg grow leading-10">choice_ref</h2>
         <img src="https://placehold.co/20" alt="remove">
       </header>
       <div class="grid grid-cols-[25%_75%] gap-1">
