--- a/template.html
+++ b/template.html
@@ -1,10 +1,10 @@
-<main class="flex flex-row px-5 font-sans leading-8 text-slate-700">
+<main class="md:flex flex-row px-5 font-sans leading-8 text-slate-700">
   <section class="basis-1/2">
     <header>
       Fields
     <header>
-    <article class="shadow-md	bg-zinc-100 rounded-md p-4 my-2">
-      <header class="flex flex-row gap-2">
+    <article class="shadow-md	bg-slate-100 rounded-md p-4 my-2">
+      <header class="flex flex-row gap-5">
         <img src="https://placehold.co/40">
         <h2 class="capitalize font-bold text-lg grow leading-10">sequence</h2>
         <img src="https://placehold.co/20" alt="remove">
@@ -47,8 +47,8 @@
         </div>
       </details>
     </article>
-    <article class="shadow-md	bg-zinc-100 rounded-md p-4 my-2">
-      <header class="flex flex-row gap-2">
+    <article class="shadow-md	bg-slate-100 rounded-md p-4 my-2">
+      <header class="flex flex-row gap-5">
         <img src="https://placehold.co/40">
         <h2 class="capitalize font-bold text-lg grow leading-10">choice_ref</h2>
         <img src="https://placehold.co/20" alt="remove">
@@ -89,15 +89,15 @@
         </div>
       </details>
     </article>
-    <footer>
-      <button>+regex</button>
-      <button>+integer</button>
-      <button>+decimal</button>
-      <button>+bool</button>
-      <button>+datetime</button>
-      <button>+choice</button>
-      <button>+choice_ref</button>
-      <button>+sequence</button>
+    <footer class="grid grid-cols-4 gap-1 leading-4 font-light">
+      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+regex</button>
+      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+integer</button>
+      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+decimal</button>
+      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+bool</button>
+      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+datetime</button>
+      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+choice</button>
+      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+choice_ref</button>
+      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+sequence</button>
     </footer>
   </section>
   <section>
