--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
       <header class="flex flex-row gap-5">
         <img src="https://placehold.co/40">
         <h2 class="capitalize font-bold text-lg grow leading-10">sequence</h2>
-        <img src="https://placehold.co/20" alt="remove">
+        <img src="https://placehold.co/20" alt="remove" class="h-fit">
       </header>
       <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="name" class="font-medium">Name</label>
@@ -51,7 +51,7 @@
       <header class="flex flex-row gap-5">
         <img src="https://placehold.co/40">
         <h2 class="capitalize font-bold text-lg grow leading-10">choice_ref</h2>
-        <img src="https://placehold.co/20" alt="remove">
+        <img src="https://placehold.co/20" alt="remove" class="h-fit">
       </header>
       <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="name" class="font-medium">Name</label>
