--- a/template.html
+++ b/template.html
@@ -1,9 +1,9 @@
-<main class="md:flex flex-row px-5 font-sans leading-8 text-slate-700">
+<main class="md:flex flex-row px-5 font-sans leading-8 text-stone-700">
   <section class="basis-1/2">
     <header>
       Fields
     <header>
-    <article class="shadow-md	bg-slate-100 rounded-md p-4 my-2">
+    <article class="shadow-md	bg-stone-100 rounded-md p-4 my-2">
       <header class="flex flex-row gap-5">
         <img src="https://placehold.co/40">
         <h2 class="capitalize font-bold text-lg grow leading-10">sequence</h2>
@@ -11,43 +11,43 @@
       </header>
       <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="name" class="font-medium">Name</label>
-        <input id="name" type="text" placeholder="jsonpath" value="id">
+        <input id="name" type="text" placeholder="jsonpath" value="id" class="hover:bg-stone-50 focus:bg-green-50 px-3">
         <label for="start" class="font-medium">Start</label>
-        <input id="start" type="number" placeholder="start" value="0">
+        <input id="start" type="number" placeholder="start" value="0" class="hover:bg-stone-50 focus:bg-green-50 px-3">
         <label for="increment" class="font-medium">Increment</label>
-        <input id="increment" type="number" placeholder="start" value="1">
+        <input id="increment" type="number" placeholder="start" value="1" class="hover:bg-stone-50 focus:bg-green-50 px-3">
       </div>
       <details class="group">
         <summary>Advanced options</summary>
         <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="synthesize" class="font-medium">Synthesize</label>
-        <select id="synthesize">
+        <select id="synthesize" class="hover:bg-stone-50 focus:bg-green-50 px-2">
           <option value="false">no</option>
           <option value="true" selected>yes</option>
         </select>
         <label for="transient" class="font-medium">Transient</label>
-        <select id="transient">
+        <select id="transient" class="hover:bg-stone-50 focus:bg-green-50 px-2">
           <option value="false">no</option>
           <option value="true" selected>yes</option>
         </select>
         <label for="preserve" class="font-medium">Preserve</label>
-        <select id="preserve">
+        <select id="preserve" class="hover:bg-stone-50 focus:bg-green-50 px-2">
           <option value="none" selected>none</option>
           <option value="null">null</option>
           <option value="empty">empty</option>
           <option value="blank">blank</option>
         </select>
         <label for="coherent_with" class="font-medium">Coherent with</label>
-        <input id="coherent_with" type="text" placeholder="field1, field2" value="">
+        <input id="coherent_with" type="text" placeholder="field1, field2" value="" class="hover:bg-stone-50 focus:bg-green-50 px-3">
         <label for="collisions" class="font-medium">Collisions</label>
-        <select id="collisions">
+        <select id="collisions" class="hover:bg-stone-50 focus:bg-green-50 px-2">
           <option value="allowed">allowed</option>
           <option value="forbidden">forbidden</option>
         </select>
         </div>
       </details>
     </article>
-    <article class="shadow-md	bg-slate-100 rounded-md p-4 my-2">
+    <article class="shadow-md	bg-stone-100 rounded-md p-4 my-2">
       <header class="flex flex-row gap-5">
         <img src="https://placehold.co/40">
         <h2 class="capitalize font-bold text-lg grow leading-10">choice_ref</h2>
@@ -55,34 +55,34 @@
       </header>
       <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="name" class="font-medium">Name</label>
-        <input id="name" type="text" placeholder="jsonpath" value="prenom">
+        <input id="name" type="text" placeholder="jsonpath" value="prenom" class="hover:bg-stone-50 focus:bg-green-50 px-3">
         <label for="uri" class="font-medium">URI</label>
-        <input id="uri" type="url" placeholder="http://domain.com/ref" value="pimo://nameFR">
+        <input id="uri" type="url" placeholder="http://domain.com/ref" value="pimo://nameFR" class="hover:bg-stone-50 focus:bg-green-50 px-3">
       </div>
       <details class="group">
         <summary>Advanced options</summary>
         <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="synthesize" class="font-medium">Synthesize</label>
-        <select id="synthesize">
+        <select id="synthesize" class="hover:bg-stone-50 focus:bg-green-50 px-2">
           <option value="false">no</option>
           <option value="true">yes</option>
         </select>
         <label for="transient" class="font-medium">Transient</label>
-        <select id="transient">
+        <select id="transient" class="hover:bg-stone-50 focus:bg-green-50 px-2">
           <option value="false">no</option>
           <option value="true">yes</option>
         </select>
         <label for="preserve" class="font-medium">Preserve</label>
-        <select id="preserve">
+        <select id="preserve" class="hover:bg-stone-50 focus:bg-green-50 px-2">
           <option value="none" selected>none</option>
           <option value="null">null</option>
           <option value="empty">empty</option>
           <option value="blank">blank</option>
         </select>
         <label for="coherent_with" class="font-medium">Coherent with</label>
-        <input id="coherent_with" type="text" placeholder="field1, field2" value="id">
+        <input id="coherent_with" type="text" placeholder="field1, field2" value="id" class="hover:bg-stone-50 focus:bg-green-50 px-3">
         <label for="collisions" class="font-medium">Collisions</label>
-        <select id="collisions">
+        <select id="collisions" class="hover:bg-stone-50 focus:bg-green-50 px-2">
           <option value="allowed">allowed</option>
           <option value="forbidden">forbidden</option>
         </select>
@@ -90,14 +90,14 @@
       </details>
     </article>
     <footer class="grid grid-cols-4 gap-1 leading-4 font-light">
-      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+regex</button>
-      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+integer</button>
-      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+decimal</button>
-      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+bool</button>
-      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+datetime</button>
-      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+choice</button>
-      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+choice_ref</button>
-      <button class="border-slate-500 text-slate-500 hover:bg-slate-200 border-2 rounded-lg p-2">+sequence</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+regex</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+integer</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+decimal</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+bool</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+datetime</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+choice</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+choice_ref</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+sequence</button>
     </footer>
   </section>
   <section>
