--- a/template.html
+++ b/template.html
@@ -11,36 +11,36 @@
       </header>
       <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="name" class="font-medium">Name</label>
-        <input id="name" type="text" placeholder="jsonpath" value="id" class="hover:bg-stone-50 focus:bg-green-50 px-3">
+        <input id="name" type="text" placeholder="jsonpath" value="id" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-3">
         <label for="start" class="font-medium">Start</label>
-        <input id="start" type="number" placeholder="start" value="0" class="hover:bg-stone-50 focus:bg-green-50 px-3">
+        <input id="start" type="number" placeholder="start" value="0" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-3">
         <label for="increment" class="font-medium">Increment</label>
-        <input id="increment" type="number" placeholder="start" value="1" class="hover:bg-stone-50 focus:bg-green-50 px-3">
+        <input id="increment" type="number" placeholder="start" value="1" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-3">
       </div>
       <details class="group">
         <summary>Advanced options</summary>
         <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="synthesize" class="font-medium">Synthesize</label>
-        <select id="synthesize" class="hover:bg-stone-50 focus:bg-green-50 px-2">
+        <select id="synthesize" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-2">
           <option value="false">no</option>
           <option value="true" selected>yes</option>
         </select>
         <label for="transient" class="font-medium">Transient</label>
-        <select id="transient" class="hover:bg-stone-50 focus:bg-green-50 px-2">
+        <select id="transient" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-2">
           <option value="false">no</option>
           <option value="true" selected>yes</option>
         </select>
         <label for="preserve" class="font-medium">Preserve</label>
-        <select id="preserve" class="hover:bg-stone-50 focus:bg-green-50 px-2">
+        <select id="preserve" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-2">
           <option value="none" selected>none</option>
           <option value="null">null</option>
           <option value="empty">empty</option>
           <option value="blank">blank</option>
         </select>
         <label for="coherent_with" class="font-medium">Coherent with</label>
-        <input id="coherent_with" type="text" placeholder="field1, field2" value="" class="hover:bg-stone-50 focus:bg-green-50 px-3">
+        <input id="coherent_with" type="text" placeholder="field1, field2" value="" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-3">
         <label for="collisions" class="font-medium">Collisions</label>
-        <select id="collisions" class="hover:bg-stone-50 focus:bg-green-50 px-2">
+        <select id="collisions" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-2">
           <option value="allowed">allowed</option>
           <option value="forbidden">forbidden</option>
         </select>
@@ -55,34 +55,34 @@
       </header>
       <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="name" class="font-medium">Name</label>
-        <input id="name" type="text" placeholder="jsonpath" value="prenom" class="hover:bg-stone-50 focus:bg-green-50 px-3">
+        <input id="name" type="text" placeholder="jsonpath" value="prenom" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-3">
         <label for="uri" class="font-medium">URI</label>
-        <input id="uri" type="url" placeholder="http://domain.com/ref" value="pimo://nameFR" class="hover:bg-stone-50 focus:bg-green-50 px-3">
+        <input id="uri" type="url" placeholder="http://domain.com/ref" value="pimo://nameFR" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-3">
       </div>
       <details class="group">
         <summary>Advanced options</summary>
         <div class="grid grid-cols-[25%_75%] gap-1">
         <label for="synthesize" class="font-medium">Synthesize</label>
-        <select id="synthesize" class="hover:bg-stone-50 focus:bg-green-50 px-2">
+        <select id="synthesize" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-2">
           <option value="false">no</option>
           <option value="true">yes</option>
         </select>
         <label for="transient" class="font-medium">Transient</label>
-        <select id="transient" class="hover:bg-stone-50 focus:bg-green-50 px-2">
+        <select id="transient" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-2">
           <option value="false">no</option>
           <option value="true">yes</option>
         </select>
         <label for="preserve" class="font-medium">Preserve</label>
-        <select id="preserve" class="hover:bg-stone-50 focus:bg-green-50 px-2">
+        <select id="preserve" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-2">
           <option value="none" selected>none</option>
           <option value="null">null</option>
           <option value="empty">empty</option>
           <option value="blank">blank</option>
         </select>
         <label for="coherent_with" class="font-medium">Coherent with</label>
-        <input id="coherent_with" type="text" placeholder="field1, field2" value="id" class="hover:bg-stone-50 focus:bg-green-50 px-3">
+        <input id="coherent_with" type="text" placeholder="field1, field2" value="id" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-3">
         <label for="collisions" class="font-medium">Collisions</label>
-        <select id="collisions" class="hover:bg-stone-50 focus:bg-green-50 px-2">
+        <select id="collisions" class="hover:bg-stone-50 focus:bg-[#dcdcaf] px-2">
           <option value="allowed">allowed</option>
           <option value="forbidden">forbidden</option>
         </select>
@@ -90,14 +90,14 @@
       </details>
     </article>
     <footer class="grid grid-cols-4 gap-1 leading-4 font-light">
-      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+regex</button>
-      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+integer</button>
-      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+decimal</button>
-      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+bool</button>
-      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+datetime</button>
-      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+choice</button>
-      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+choice_ref</button>
-      <button class="border-stone-500 text-stone-500 hover:bg-stone-200 border-2 rounded-lg p-2">+sequence</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-[#dcdcaf] border-2 rounded-lg p-2">+regex</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-[#dcdcaf] border-2 rounded-lg p-2">+integer</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-[#dcdcaf] border-2 rounded-lg p-2">+decimal</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-[#dcdcaf] border-2 rounded-lg p-2">+bool</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-[#dcdcaf] border-2 rounded-lg p-2">+datetime</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-[#dcdcaf] border-2 rounded-lg p-2">+choice</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-[#dcdcaf] border-2 rounded-lg p-2">+choice_ref</button>
+      <button class="border-stone-500 text-stone-500 hover:bg-[#dcdcaf] border-2 rounded-lg p-2">+sequence</button>
     </footer>
   </section>
   <section>
